--- a/app_users/templates/app_users/login.html
+++ b/app_users/templates/app_users/login.html
@@ -1,5 +1,5 @@
-
 {% extends 'base.html' %}
+<title>Login Page</title>
 
 {% block content %}
 <form action="{% url 'login' %}" method="post" class="w-[300px] flex flex-col gap-2 absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2">
@@ -12,5 +12,8 @@
         Akkauntingiz yo'qmi? Unda
         <a href="{% url 'signup' %}" class="text-blue-900 font-bold">ro'yxatdan o'ting</a>
     </small>
+    <div class="text-center mt-4">
+        <a href="{% url 'social:begin' 'google-oauth2' %}" class="btn btn-primary">Login with Google</a>
+    </div>
 </form>
 {% endblock content %}
