--- a/app_users/templates/app_users/register.html
+++ b/app_users/templates/app_users/register.html
@@ -1,5 +1,6 @@
 
 {% extends 'base.html' %}
+<title>Register Page</title>
 
 {% block content %}
 <form action="{% url 'signup' %}" method="post" class="w-[300px] flex flex-col gap-2 absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2">
